<resources>
    <string name="app_name">CashGuard</string>
    <string name="select_category">Select a Category</string>
    <string name="settings_title">Settings</string>
    <string name="change_currency">Change Currency</string>
    <string name="currency_title">Currency</string>
    <string name="export_summary">Export Summary to Excel</string>
    <string name="help">Help</string>
    <string name="navigation_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation Drawer</string>

    <string name="budget_amount_format">%1$s / %2$s</string>
    <string name="budget_percentage_format">%d%%</string>
    <string name="add_budget_category">Add Budget Category</string>
    <string name="category_name_hint">Category Name</string>
    <string name="budget_amount_hint">Budget Amount</string>
    <string name="category_color_label">Category Color:</string>
    <string name="add_budget_fab_description">Add Budget Category</string>
    <string name="budget_balances_empty_state">You haven\'t set any budgets yet.\nTap the + button below to add one!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="tab_budget">Budget</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_expenses">Expenses</string>


</resources>